copied in auth stuff

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "Default": "Data Source=devDb.db"
   },
+  "AppSettings": {
+    "Token": "very secret token used in production"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
