--- a/Client/Learning.Client.csproj
+++ b/Client/Learning.Client.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Blazor-State" Version="3.4.4" />
     <PackageReference Include="Blazored.LocalStorage" Version="3.0.0" />
     <PackageReference Include="Blazored.Video" Version="1.0.0" />
+    <PackageReference Include="Fluxor.Blazor.Web" Version="4.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="5.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.4" />
